# AirSend

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.es.md  README.md
.github/workflows/: release.yml
crates/airplay-core/: Cargo.toml
crates/airplay-core/examples/: pair_cli.rs  probe_cli.rs  stream_cli.rs  tone_cli.rs
crates/airplay-core/src/: discovery.rs  lib.rs  pairing.rs  probe.rs  streaming.rs
crates/audio-capture/: Cargo.toml
crates/audio-capture/examples/: dump_wav.rs
crates/audio-capture/src/: lib.rs  linux.rs  linux_parec.rs  windows.rs
crates/audio-encode/: Cargo.toml
crates/audio-encode/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: i18n.ts  main.ts  styles.css
