[workspace]
resolver = "2"
members = [
    "crates/airplay-core",  # paquete renombrado a `cap-core` (Conexión AirPlay)
    "crates/audio-capture",
    "crates/audio-encode",
    "src-tauri",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "GPL-2.0"
authors = ["Pablo Díaz Ruipérez <diazruiperezpablo@gmail.com>"]
repository = "https://github.com/pablodiaz/ConexionAirPlay"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mdns-sd = "0.11"
ringbuf = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
