[package]
name = "conexion-airplay"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stream Windows system audio to a HomePod via AirPlay 2"

[lib]
name = "conexion_airplay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

cap-core = { path = "../crates/airplay-core" }
audio-capture = { path = "../crates/audio-capture" }
audio-encode = { path = "../crates/audio-encode" }
crossbeam-channel = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
