[package]
name = "cap-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "cap_core"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
mdns-sd = { workspace = true }
async-trait = "0.1"

# Reutilizamos el sender AirPlay 2 alpha de lmcgartland/airplay2-rs (GPL-2.0).
# Apuntamos a nuestro fork `Pabldi08/airplay2-rs` con un parche mínimo
# (`set_socket_qos` gated detrás de `#[cfg(unix)]`, stub en Windows) porque el
# upstream no compila en MSVC tal cual. Resto sin cambios. Pendiente PR upstream.
# Renombramos los paquetes para no colisionar con nuestro crate local (también
# llamado airplay-core en el repo upstream).
ap2rs-pairing = { package = "airplay-pairing", git = "https://github.com/Pabldi08/airplay2-rs", rev = "1baeaae336ca3a9828e732500082f5fd1767d2fd" }
ap2rs-core = { package = "airplay-core", git = "https://github.com/Pabldi08/airplay2-rs", rev = "1baeaae336ca3a9828e732500082f5fd1767d2fd" }
ap2rs-client = { package = "airplay-client", git = "https://github.com/Pabldi08/airplay2-rs", rev = "1baeaae336ca3a9828e732500082f5fd1767d2fd" }
ap2rs-audio = { package = "airplay-audio", git = "https://github.com/Pabldi08/airplay2-rs", rev = "1baeaae336ca3a9828e732500082f5fd1767d2fd" }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[[example]]
name = "probe_cli"
path = "examples/probe_cli.rs"

[[example]]
name = "pair_cli"
path = "examples/pair_cli.rs"

[[example]]
name = "tone_cli"
path = "examples/tone_cli.rs"

[[example]]
name = "stream_cli"
path = "examples/stream_cli.rs"
required-features = []

[dev-dependencies.audio-capture]
path = "../audio-capture"

[dev-dependencies.crossbeam-channel]
version = "0.5"
